<resources>
    <string name="app_name">DetoxExample</string>
    <string name="action_settings">Settings</string>

    <!-- Strings used for inter-fragments navigation -->
    <string name="actions_heading">Actions Screen</string>
</resources>
